src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_3_errors.snap
---
source: src/parser/test.rs
description: let;
expression: "parser_errors(\"let;\", errors)"
---
let;
   ^ SyntaxError: Expected '<identifier>' not found.
